# python-project-50

./: .coverage  .flake8  .gitignore  Makefile  README.md  demo.cast  demo_script.sh  gendiff.py  pyproject.toml  requirements.txt
.github/workflows/: pyci.yml
gendiff/: __init__.py  builder.py  gendiff.py  parser.py
gendiff.egg-info/: PKG-INFO  SOURCES.txt
gendiff/formaters/: format_identifier.py  json.py  plain.py  stylish.py
gendiff/formatters/: format_identifier.py  json.py  plain.py  stylish.py
gendiff/scripts/: builder.py  find_diff.py  gendiff.py  gendiff.py.bak  parser.py
gendiff_test/: expected_output.yaml  gendiff.py
hexlet_code/scripts/: gendiff.py
tests/: test_gendiff.py  test_json.py  test_plain.py
tests/test_data/: expected_output.yaml  file2.yml
